--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,11 @@ main{
   margin: 0 auto;
   text-align: center;
 }
+
+button {
+  background-color: transparent;
+  color: #4f4342;
+  border: 0;
+  display: inline-block;
+  width: 100px;
+}
