--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,16 @@ main{
 
 button {
   background-color: transparent;
-  color: #4f4342;
+  color: rgb(128, 138, 128);
   border: 0;
   display: inline-block;
-  width: 100px;
+  width: 85px;
+}
+
+button.with-text{
+  width:auto;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 1.4rem;
 }
