--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,19 @@ button {
 
 button.with-text{
   width:auto;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.4);
   border-radius: 10px;
   padding: 10px 20px;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
+  line-height: 36px;
+}
+
+button.with-text svg{
+  width: 35px;
+  float: left;
+  margin-right: 5px;
+}
+
+label{
+  display: block;
 }
