--- a/src/Slider.css
+++ b/src/Slider.css
@@ -1,12 +1,25 @@
-.slider{
+.slider {
     height: 40px;
-    border: 2px solid red;
     border-radius: 20px;
 }
 
-.thumb{
-    background-image: red;
+.thumb {
     cursor: pointer;
     width: 40px;
     height: 40px;
+    border-radius: 20px;
+}
+
+.slider.red{
+    border: 2px solid var(--red);
+}
+.slider.red .thumb {
+    background-color: var(--red);
+}
+
+.slider.green{
+    border: 2px solid var(--green);
+}
+.slider.green .thumb {
+    background-color: var(--green);
 }
